# aisp_ros2_control_template

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
aisp_ros2_control_template/: aisp_kinematics_control_example.py
cfg/: vfi_array.yaml
launch/: aisp_ros2_control_template_launch.py  sas_robot_kinematics_constrained_multiarm_launch.py  sim_aisp_cobotta_1_launch.py  sim_aisp_cobotta_2_launch.py  sim_aisp_vs050_1_launch.py  sim_aisp_vs050_2_launch.py
robots/: aisp_cobotta_robot_1.json  aisp_cobotta_robot_2.json  aisp_vs050_robot_1.json  aisp_vs050_robot_2.json
scripts/: aisp_control_example_py.py
src/: aisp_ros2_control_template_cpp.cpp
